--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,3 @@
-<h1>This is your user show page!</h1>
+<h1><%= @user.username %> Profile Page</h1>
+
+<%=  link_to 'Edit Profile', edit_user_path(current_user) %>
