adds paperclip image to user profile and more user validations

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,16 @@
 <%= form_for @user do |f| %>
 
   <p>
+    <%= f.label :first_name %><br>
+    <%= f.text_field :first_name %>
+  </p>
+
+  <p>
+    <%= f.label :last_name %><br>
+    <%= f.text_field :last_name %>
+  </p>
+
+  <p>
     <%= f.label :username %><br>
     <%= f.text_field :username %>
   </p>
@@ -8,6 +18,16 @@
   <p>
     <%= f.label :password %><br>
     <%= f.password_field :password %>
+  </p>
+
+  <p>
+    <%= f.label :description %><br>
+    <%= f.text_field :description %>
+  </p>
+
+  <p>
+    <%= f.label :image %>
+    <%= f.file_field :image %>
   </p>
 
   <p>
