--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,11 @@
-<h1><%= @user.username %> Profile Page</h1>
+<h1><%= @user.first_name %>'s Profile Page</h1>
+
+<div>
+  <%= image_tag @user.image.url(:small) %>
+</div>
+
+<div>
+  <%= @user.description %>
+</div>
 
 <%=  link_to 'Edit Profile', edit_user_path(current_user) %>
