adds blog creation and editing features

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <h1>This is your Blog Home Page!</h1>
-
+<%= link_to 'Create New Blog Post', new_post_path %>
 <h1>Blog Posts:</h1>
 <ul>
   <% @posts.each do |post| %>
