--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <%=  link_to 'Edit Profile', edit_user_path(current_user) %>
 </div>
 <div>
-  <%= link_to 'Your Blog', author_index_path(current_user) %>
+  <%= link_to 'Your Blog Index', author_index_path(current_user) %>
 </div>
 <div>
   <%= image_tag @user.image.url(:small) %>
