--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,9 @@
+.chicagoskylineimage {
+  content: url("chicagoskyline.jpg");
+  margin-left: auto;
+  margin-right: auto;
+}
+
 a {
   color: #27AAE1;
   text-decoration: none;
