--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,15 @@
-<h1>This is your Blog Home Page!</h1>
-<%= link_to 'Create New Blog Post', new_post_path %>
-<h1>Blog Posts:</h1>
-<ul>
-  <% @posts.each do |post| %>
-    <li><%= link_to post.title, post_path(post) %></li>
+<h1>Blog Posts</h1>
+
+<% if logged_in? %>
+  <% if current_user.admin %>
+    <%= link_to 'Create New Blog Post', new_post_path %>
   <% end %>
-</ul>
+<% end %>
+
+<% if @posts %>
+  <ul>
+    <% @posts.each do |post| %>
+      <li><%= link_to post.title, post_path(post) %></li>
+    <% end %>
+  </ul>
+<% end %>
