--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,7 @@
 
 <% if @posts %>
   <ul>
-    <% @posts.each do |post| %>
+    <% @posts.reverse.each do |post| %>
       <li><%= link_to post.title, post_path(post) %></li>
     <% end %>
   </ul>
