adds profile pic to home page and additional css

--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -7,6 +7,18 @@
   background-size: cover;
 }
 
+.profilephoto {
+  height: 300px;
+  width: 215px;
+  border: 7px solid #FFFBF7;
+  border-radius: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5px;
+  margin-bottom: 40px;
+}
+
 nav {
   text-align: center;
   background-color: black;
