--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Welcome to Jim's Website</h1>
+<h1><center>Welcome to Jim's Website</center></h1>
 
-
+<%= image_tag("jim1_cropped.jpg", class: "profilephoto") %>
 
 
 
