--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,11 @@
 </head>
 <body class="row background-2e342a">
   <div class="col-md-1"> </div>
-  <div class="col-md-10 chicagoskylineimage">
+  <div class="col-md-10">
     <div class="row">
       <nav class="col-md-6">
         <span class="pipe-separate"><%= link_to 'Home', root_path %></span>
         <span class="pipe-separate"><%= link_to 'Blog', posts_path %></span>
-        <span class="pipe-separate"><%= link_to 'About Me', about_path %></span>
         <span class="pipe-separate"><%= link_to 'Resume', resume_path %></span>
       </nav>
       <nav class="col-md-6" id="append-login">
