--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,31 +1,31 @@
 <%= form_for @user do |f| %>
 
-  <p>
+  <p class="index-text">
     <%= f.label :first_name %><br>
     <%= f.text_field :first_name %>
   </p>
 
-  <p>
+  <p class="index-text">
     <%= f.label :last_name %><br>
     <%= f.text_field :last_name %>
   </p>
 
-  <p>
+  <p class="index-text">
     <%= f.label :username %><br>
     <%= f.text_field :username %>
   </p>
 
-  <p>
+  <p class="index-text">
     <%= f.label :password %><br>
     <%= f.password_field :password %>
   </p>
 
-  <p>
+  <p class="index-text">
     <%= f.label :description %><br>
     <%= f.text_field :description %>
   </p>
 
-  <p>
+  <p class="index-text">
     <%= f.label :image %>
     <%= f.file_field :image %>
   </p>
