--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,3 +13,7 @@
     <% end %>
   </ul>
 <% end %>
+<script>
+  $('.nav-link').removeClass('nav-highlight');
+  $('.blog-link').addClass('nav-highlight');
+</script>
