--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,3 +16,8 @@
 <div>
   <%= render 'form' %>
 </div>
+
+<script>
+  $('.nav-link').removeClass('nav-highlight');
+  $('.create-link').addClass('nav-highlight');
+</script>
