--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,3 +13,8 @@
   <%= @user.description %>
 </div>
 
+<script>
+  $('.nav-link').removeClass('nav-highlight');
+  $('.profile-link').addClass('nav-highlight');
+</script>
+
