--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,5 +11,9 @@
   </div>
   <div class="col-md-1"></div>
 </div>
+<script>
+  $('.nav-link').removeClass('nav-highlight');
+  $('.home-link').addClass('nav-highlight');
+</script>
 
 
