--- a/app/views/welcome/resume.html.erb
+++ b/app/views/welcome/resume.html.erb
@@ -1,5 +1,7 @@
-<h1>Resume</h1>
-
 <div class="row">
   <%= image_tag("ONeal_Resume_2016.jpg", class: "width-100 pad-1") %>
 </div>
+<script>
+  $('.nav-link').removeClass('nav-highlight');
+  $('.resume-link').addClass('nav-highlight');
+</script>
