--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,21 +1,22 @@
-<h1>Post Show Page!!</h1>
-<div>
+<h1>
   <%= @post.title %>
-</div>
-<div>
-  <%= @post.content %>
+</h1>
+<div class="blog-container">
+  <div class="standard-text">
+    <%= @post.content %>
+  </div>
+  <div class="mar-t-1">
+    <% if logged_in? %>
+      <% if current_user.admin %>
+        <%= link_to 'Edit Post', edit_post_path(@post) %>
+      <% end %>
+    <% end %>
+  </div>
 </div>
 
-<% if logged_in? %>
-  <% if current_user.admin %>
-    <div>
-      <%= link_to 'Edit Post', edit_post_path(@post) %>
-    </div>
-  <% end %>
-<% end %>
 
 <% if logged_in? %>
-  <div class="comment-link">
+  <div class="comment-link mar-l-3">
     <%= link_to 'Add Comment', new_post_comment_path(@post), remote: true %>
   </div>
   <div id="append-comment-form"></div>
@@ -26,10 +27,14 @@
 <% if @comments %>
   <ul>
     <% @comments.reverse.each do |comment| %>
-      <li>
+      <li class="standard-text mar-l-3">
         <%= comment.content %><br>
         by <%= comment_author_name(comment) %>
       </li>
     <% end %>
   </ul>
 <% end %>
+<script>
+  $('.nav-link').removeClass('nav-highlight');
+  $('.blog-link').addClass('nav-highlight');
+</script>
