--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,8 +14,11 @@
   <% end %>
 <% end %>
 
-
 <script>
-  $('.nav-link').removeClass('nav-highlight');
+  $('#login-bar').removeClass();
+  $('#nav-bar').removeClass();
+  $('#login-bar').addClass('col-md-6');
+  $('#nav-bar').addClass('col-md-6');
+  $('.nav-link').removeClass();
   $('.blog-link').addClass('nav-highlight');
 </script>
