--- a/app/views/welcome/resume.html.erb
+++ b/app/views/welcome/resume.html.erb
@@ -2,6 +2,10 @@
   <%= image_tag("ONeal_Resume_2016.jpg", class: "width-100 pad-1") %>
 </div>
 <script>
+  $('#login-bar').removeClass();
+  $('#nav-bar').removeClass();
+  $('#login-bar').hide();
+  $('#nav-bar').addClass('col-md-12');
   $('.nav-link').removeClass('nav-highlight');
   $('.resume-link').addClass('nav-highlight');
 </script>
