--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,19 +10,20 @@
   <div class="col-md-1"> </div>
   <div class="col-md-10">
     <div class="row">
-      <nav class="col-md-6">
+      <nav id="nav-bar" class="col-md-6">
         <span class="pipe-separate"><%= link_to 'Home', root_path, :class => "nav-link home-link" %></span>
+        <span class="pipe-separate"><%= link_to 'About Me', about_path, :class => "nav-link about-link" %></span>
         <span class="pipe-separate"><%= link_to 'Blog', posts_path, :class => "nav-link blog-link" %></span>
         <span class="pipe-separate"><%= link_to 'Resume', resume_path, :class => "nav-link resume-link" %></span>
       </nav>
-      <nav class="col-md-6">
-        <% if !logged_in? %>
-          <span class="pipe-separate"><%= link_to 'Create Account', new_user_path, :class => "nav-link create-link" %></span>
-          <span class="pipe-separate login"><%= link_to 'Login', new_user_path, remote: true %></span>
-        <% elsif logged_in? %>
-          <span class="pipe-separate"><%= link_to current_user.username, user_path(current_user), :class => "nav-link profile-link" %></span>
-          <span class="pipe-separate"><%= link_to 'Logout', logout_path %></span>
-        <% end %>
+      <nav id="login-bar" class="col-md-6">
+          <% if !logged_in? %>
+            <span class="pipe-separate"><%= link_to 'Create Account', new_user_path, :class => "nav-link create-link" %></span>
+            <span class="pipe-separate login"><%= link_to 'Login', new_user_path, :class => "nav-link", remote: true %></span>
+          <% elsif logged_in? %>
+            <span class="pipe-separate"><%= link_to current_user.username, user_path(current_user), :class => "nav-link profile-link" %></span>
+            <span class="pipe-separate"><%= link_to 'Logout', logout_path, :class => "nav-link" %></span>
+          <% end %>
       </nav>
     </div>
     <div id="append-login">
