--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,13 +5,21 @@
 </div>
 <div class="row mar-t-2">
   <div class="col-md-1"></div>
-  <div class="col-md-10">
-    <p class="standard-text">Hello, my name is Jim.  I am originally from a small town on Michigan's west coast and relocated to Chicago, IL in October 2013.  I have a bachelor of science degree in mechanical engineering from Western Michigan University and worked as an engineer for 15 years, mostly in the manufacturing industry designing brakes and axles for heavy equipment, followed by some time in the nuclear power industry running seismic analysis on power plants. I felt that my creative side and problem solving skills were not being utilized, so I decided to embark on a career change into software development.  I recently graduated from DevBootcamp, an accelerated web development trade school, and am now looking for opportunities to join the software and web development industry.</p>
-    <p class="standard-text">My hobbies include swing dancing, volleyball, kickboxing, movies, anything outside in the summer, hanging out with friends, good beer, and waffles... you can never have enough waffles.</p>
-  </div>
+    <div class="col-md-10 blog-container"><center>
+      <p class="standard-text">Hi there, my name is Jim.  Welcome to my website!</p>
+      <p class="standard-text">I built this website from scratch with my own two hands using HTML, CSS, Ruby, Ruby on Rails, JavaScript and jQuery.</p>
+      <p class="standard-text">To learn more about me, check out my <%= link_to 'About Me', about_path %> page, <%= link_to 'Resume', resume_path %>, or <%= link_to 'Blog', posts_path %>!</p>
+      <a href="https://www.linkedin.com/in/jamesponeal"><%= image_tag("linkedin-icon.png", class: "icon") %></a>
+      <a href="https://github.com/jamesponeal"><%= image_tag("github-icon-reverse.png", class: "icon") %></a>
+      <a href="https://twitter.com/jamesponeal"><%= image_tag("twitter-icon.png", class: "icon") %></a>
+    </center></div>
   <div class="col-md-1"></div>
 </div>
 <script>
+  $('#login-bar').removeClass();
+  $('#nav-bar').removeClass();
+  $('#login-bar').hide();
+  $('#nav-bar').addClass('col-md-12');
   $('.nav-link').removeClass('nav-highlight');
   $('.home-link').addClass('nav-highlight');
 </script>
