--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
   <div class="col-md-1"></div>
     <div class="col-md-10 blog-container"><center>
       <p class="standard-text">Hi there, my name is Jim.  Welcome to my website!</p>
-      <p class="standard-text">I built this website from scratch with my own two hands using HTML, CSS, Ruby, Ruby on Rails, JavaScript and jQuery.</p>
+      <p class="standard-text">I built this website from scratch using HTML, CSS, Ruby on Rails, JavaScript, and jQuery.<br>I am using a PostgreSQL database hosted on Heroku.</p>
       <p class="standard-text">To learn more about me, check out my <%= link_to 'About Me', about_path %> page, <%= link_to 'Resume', resume_path %>, or <%= link_to 'Blog', posts_path %>!</p>
       <a href="https://www.linkedin.com/in/jamesponeal"><%= image_tag("linkedin-icon.png", class: "icon") %></a>
       <a href="https://github.com/jamesponeal"><%= image_tag("github-icon-reverse.png", class: "icon") %></a>
