--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -50,10 +50,33 @@
   margin-right: 1em;
 }
 
+.align-left{
+  float: left;
+  margin-left: 1em;
+}
+
 .standard-text{
   font-family: 'open sans',arial,sans-serif;
   color: #f2f2f2;
   font-size: 16px;
+}
+
+.text-14p{
+  font-family: 'open sans',arial,sans-serif;
+  color: #f2f2f2;
+  font-size: 14px;
+}
+
+.text-12p{
+  font-family: 'open sans',arial,sans-serif;
+  color: #f2f2f2;
+  font-size: 12px;
+}
+
+.text-10p{
+  font-family: 'open sans',arial,sans-serif;
+  color: #f2f2f2;
+  font-size: 10px;
 }
 
 .courier-standard{
@@ -84,24 +107,24 @@
   margin: 0 auto;
   background-color: #3e4739;
   border-radius: 10px;
-  min-height: 130px;
+  min-height: 80px;
   padding: 15px 15px 15px 15px;
 }
 
 
 .blog-row{
+  width: 80%;
+  margin: 0 auto;
+  min-height: 3em;
   background-color: #3e4739;
   border-radius: 10px;
-  width: 60em;
-  height: 3em;
-  margin: 0 auto;
   line-height: 3em;
+  padding: 5px 5px 5px 5px;
 }
 
 .center-me {
   margin: 0 auto;
 }
-
 
 h1{
   font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
@@ -109,12 +132,10 @@ h1{
   color: #337ab7;
 }
 
-.h2-text{
+h2{
   font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
   font-weight: 100;
-  color: #f2f2f2;
-  font-size: 24px;
-  text-decoration: underline;
+  color: #337ab7;
 }
 
 .nav-highlight{
@@ -225,6 +246,9 @@ nav:visited{
   margin-left: 5em;
 }
 
+.mar-l-10 {
+  margin-left: 10%;
+}
 
 
 .pad-1 {
