--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
 <%= form_for [@post, @comment] do |f| %>
-  <li><%= f.text_field :content, :placeholder => "comment" %></li>
-  <li><%= f.submit "Submit" %></li>
+  <%= f.cktext_area :content %>
+  <%= f.submit "Submit" %>
 <% end %>
