--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,39 +1,41 @@
-<h1>
-  <%= @post.title %>
-</h1>
+<h2><span class="text-12p mar-r-1"><%= link_to '<-- Blog Home', posts_path %></span><%= @post.title %></h2>
 <div class="blog-container">
-  <div class="standard-text">
-    <%= @post.content %>
+  <div class="text-12p align-right">
+    <%= @post.created_at.strftime('%m-%d-%Y') %>
   </div>
-  <div class="mar-t-1">
-    <% if logged_in? %>
+  <div class="standard-text">
+    <%= @post.content.html_safe %>
+  </div>
+  <% if logged_in? %>
+    <div class="mar-t-1">
       <% if current_user.admin %>
         <%= link_to 'Edit Post', edit_post_path(@post) %>
       <% end %>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
 </div>
 
+<div class="blog-container mar-t-1">
+  <% if logged_in? %>
+    <div class="comment-link mar-b-1">
+      <%= link_to 'Add Comment', new_post_comment_path(@post), remote: true %>
+    </div>
+    <div id="append-comment-form"></div>
+  <% else %>
+    <p>Create an account or login to add a comment.</p>
+  <% end %>
+  <% if @comments %>
+    <ul>
+      <% @comments.reverse.each do |comment| %>
+        <li class="text-14p mar-b-1">
+          <%= comment.content.html_safe %><br>
+          <span class="text-12p"> - by <%= comment_author_name(comment) %> on <%= comment.created_at.strftime('%m-%d-%Y') %></span>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
+</div>
 
-<% if logged_in? %>
-  <div class="comment-link mar-l-3">
-    <%= link_to 'Add Comment', new_post_comment_path(@post), remote: true %>
-  </div>
-  <div id="append-comment-form"></div>
-<% else %>
-  <p>Create an account or login to add a comment.</p>
-<% end %>
-
-<% if @comments %>
-  <ul>
-    <% @comments.reverse.each do |comment| %>
-      <li class="standard-text mar-l-3">
-        <%= comment.content %><br>
-        by <%= comment_author_name(comment) %>
-      </li>
-    <% end %>
-  </ul>
-<% end %>
 <script>
   $('.nav-link').removeClass('nav-highlight');
   $('.blog-link').addClass('nav-highlight');
