--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -79,6 +79,10 @@
   font-size: 10px;
 }
 
+.v-align{
+  vertical-align: bottom;
+}
+
 .courier-standard{
   font-family: 'Courier New', 'Courier', monospace;
   color: #f2f2f2;
@@ -136,6 +140,22 @@ h2{
   font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
   font-weight: 100;
   color: #337ab7;
+  margin-top: 15px;
+  margin-bottom: 0px;
+}
+
+h4{
+  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
+  font-weight: 100;
+  color: #337ab7;
+  margin-top: 0px;
+}
+
+.blog-signature{
+  font-family: 'Copperplate', 'Copperplate Gothic Light', sans-serif;
+  font-weight: 100;
+  color: #337ab7;
+  font-size: 20px;
 }
 
 .nav-highlight{
@@ -165,6 +185,29 @@ nav:visited{
   color: #337ab7;
 }
 
+.code {
+  width: 50%;
+  font-family: "Courier New", Courier, monospace;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding-left: 0.5em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  background-color: #202020;
+  color: #B0B0B0;
+}
+
+.codewide {
+  width: 90%;
+  font-family: "Courier New", Courier, monospace;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding-left: 0.5em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  background-color: #202020;
+  color: #B0B0B0;
+}
 
 .mar-b-1 {
   margin-bottom: 1em;
@@ -184,6 +227,10 @@ nav:visited{
 
 .mar-b-16 {
   margin-bottom: 16em;
+}
+
+.mar-t-05{
+  margin-top: 0.5em;
 }
 
 .mar-t-1 {
