--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body class="row background-2e342a">
+<body class="row background-FFFBF7">
   <div class="col-md-1"> </div>
   <div class="col-md-10">
     <div class="row">
@@ -15,6 +15,7 @@
         <span class="pipe-separate"><%= link_to 'About Me', about_path, :class => "nav-link about-link" %></span>
         <span class="pipe-separate"><%= link_to 'Blog', posts_path, :class => "nav-link blog-link" %></span>
         <span class="pipe-separate"><%= link_to 'Resume', resume_path, :class => "nav-link resume-link" %></span>
+        <span class="pipe-separate"><%= link_to 'Projects', project_path, :class => "nav-link project-link" %></span>
       </nav>
       <nav id="login-bar" class="col-md-6">
           <% if !logged_in? %>
