--- a/app/views/welcome/project.html.erb
+++ b/app/views/welcome/project.html.erb
@@ -1,5 +1,6 @@
-<div class="row resume mar-t-1 mar-b-1">
-  <%= image_tag("ONeal_Resume_2016.jpg", class: "width-100 pad-1") %>
+<h1>Projects</h1>
+<div class="blog-container">
+  <p class="standard-text">Hello, my name is Jim.</p>
 </div>
 <script>
   $('#login-bar').removeClass();
@@ -7,5 +8,5 @@
   $('#login-bar').hide();
   $('#nav-bar').addClass('col-md-12');
   $('.nav-link').removeClass('nav-highlight');
-  $('.resume-link').addClass('nav-highlight');
+  $('.project-link').addClass('nav-highlight');
 </script>
