--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,5 +1,5 @@
 <h1>About Me</h1>
-<div class="blog-container">
+<div class="blog-container mar-b-1">
   <p class="standard-text">Hello, my name is Jim.  I am originally from a small town on Michigan's west coast and relocated to Chicago, IL in October 2013.  I have a bachelor of science degree in mechanical engineering from Western Michigan University and worked as an engineer for 15 years, mostly in the manufacturing industry developing brakes and axles for construction, agricultural, and mining vehicles. This was followed by some time in the nuclear power industry running seismic analysis on power plants. During my time in the nuclear power industry, I felt that my creativity, design and problem solving skills were not being utilized, and I started to look into making a change. I had always had an interst in software, and after going through some free Ruby and JavaScript tutorials on CodeCademy, I realized that I had a passion for it. I decided to jump in with both feet and embark on a career change into software development which led me to Dev Bootcamp, a full-time accelerated 18 week software development school. I applied, got accepted, and recently graduated.  During my time there I focused on HTML, CSS, Ruby, JavaScript, Ruby on Rails, jQuery, SQL, Active Record, principles of object-oriented programming and test-driven development. I am now looking for opportunities to join the software and web development industry.</p>
   <p class="standard-text">My hobbies include swing dancing, volleyball, kickboxing, movies, writing code, anything outside in the summer, hanging out with friends, eating brunch, drinking good beer, learning about physics, and I have a man-crush on Neil DeGrasse Tyson.</p>
   <p class="standard-text">I built this website from scratch using HTML, CSS, Ruby on Rails, JavaScript, and jQuery. I am using a PostgreSQL database hosted on Heroku.  The database primarily exists to store the <%= link_to 'blog', posts_path %> section of my site, where you can read about the random thoughts that go through my head.</p>
@@ -13,7 +13,7 @@
   <p class="standard-text">
     Or visit me at the following social media websites:<br>
   <a href="https://www.linkedin.com/in/jamesponeal"><%= image_tag("linkedin-icon.png", class: "icon") %></a>
-  <a href="https://github.com/jamesponeal"><%= image_tag("github-icon-reverse.png", class: "icon") %></a>
+  <a href="https://github.com/jamesponeal"><%= image_tag("github-icon.png", class: "icon") %></a>
   <a href="https://twitter.com/jamesponeal"><%= image_tag("twitter-icon.png", class: "icon") %></a>
   </p>
   </center>
