adds projects controller and projects home view page, styling changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <span class="pipe-separate"><%= link_to 'About Me', about_path, :class => "nav-link about-link" %></span>
         <span class="pipe-separate"><%= link_to 'Blog', posts_path, :class => "nav-link blog-link" %></span>
         <span class="pipe-separate"><%= link_to 'Resume', resume_path, :class => "nav-link resume-link" %></span>
-        <span class="pipe-separate"><%= link_to 'Projects', project_path, :class => "nav-link project-link" %></span>
+        <span class="pipe-separate"><%= link_to 'Projects', home_path, :class => "nav-link project-link" %></span>
       </nav>
       <nav id="login-bar" class="col-md-6">
           <% if !logged_in? %>
