--- a/app/views/projects/home.html.erb
+++ b/app/views/projects/home.html.erb
@@ -1,6 +1,6 @@
 <h1>Projects</h1>
 <div class="blog-container">
-  <p class="standard-text">Hello, my name is Jim.</p>
+  <p class="standard-text">UNDER CONSTRUCTION - PLEASE COME BACK LATER</p>
 </div>
 <script>
   $('#login-bar').removeClass();
