--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -124,6 +124,7 @@
   width: 60em;
   margin: 0 auto;
   background-color: #f0f0f5;
+  border: 2px solid #337ab7;
   border-radius: 10px;
   min-height: 80px;
   padding: 15px 15px 15px 15px;
